@@ -1450,6 +1450,13 @@ NOCACHE=
 # ROOMITEMS - turns on item saving for ALL rooms (except junk) at shutdown.
 SAVE=
 
+# The OBJSPERTHREAD value defines how many ticking objects will be assigned
+# to a single thread before a new thread is created.  Keeping this value
+# high can cut down on thread use and make your sysadmin happy.  Keeping it
+# low will cause lots of threads and mitigate the damage caused by blocked
+# threads.  The default is 128
+OBJSPERTHREAD=128
+ 
 ######################################################################
 # Custom Room, MOB, Ability, Exit, etc. Object info
 ######################################################################
